se realizan cambios de diseño en el perfil, nosotros y barra de navegacion

--- a/client/app/nosotros/nosotros.html
+++ b/client/app/nosotros/nosotros.html
@@ -46,3 +46,81 @@
 
 
 </div>
+
+
+<!-- -- -->
+
+<div class="well clearfix punto ">
+  <!-- <div class="container Nosotros"> -->
+    <div class="row">
+    <div class="content hidden-xs col-sm-12">
+      <div class="card1 col-md-12 ">
+        <div class="firstinfo"><img src="assets/images/Profile/1.jpg"/>
+          <div class="profileinfo">
+            <h1>Julian Andres Chaparro</h1>
+            <h3>Diseñador</h3>
+            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+          </div>
+        </div>
+      </div>
+      <div class="card1 col-md-12">
+        <div class="firstinfo"><img src="assets/images/Profile/2.png"/>
+          <div class="profileinfo">
+            <h1>Carlos Jose Victoria</h1>
+            <h3>Progamador</h3>
+            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+          </div>
+        </div>
+      </div>
+      <div class="card1 col-md-12 ">
+        <div class="firstinfo"><img src="assets/images/Profile/original.png"/>
+          <div class="profileinfo">
+            <h1>Andres Felipe Contreras</h1>
+            <h3>Programador</h3>
+            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  <!-- </div> -->
+</div>
+
+
+<!-- <div class="well clearfix  "> -->
+  <div class="container Oculto">
+    <div class="row">
+    <div class="content visible-xs col-xs-12">
+       <div class="card1 ">
+        <div class="firstinfo"><img src="assets/images/Profile/1.jpg"/>
+          <div class="profileinfo">
+            <h1>Julian Andres Chaparro</h1>
+            <h3>Diseñador</h3>
+            <p class="text-justify">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+          </div>
+        </div>
+      </div>
+      <div class="card1">
+        <div class="firstinfo"><img src="assets/images/Profile/2.png"/>
+          <div class="profileinfo">
+            <h1>Carlos Jose Victoria</h1>
+            <h3>Progamador</h3>
+            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+          </div>
+        </div>
+      </div>
+      <div class="card1">
+        <div class="firstinfo"><img src="assets/images/Profile/original.png"/>
+          <div class="profileinfo">
+            <h1>Andres Felipe Contreras</h1>
+            <h3>Programador</h3>
+            <p class="bio">Lived all my life on the top of mount Fuji, learning the way to be a Ninja Dev.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+  </div>
+<!-- </div> -->
