--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,6 @@
     <!-- build:css({.tmp,client}) app/main/main.css -->
     <link rel="stylesheet" href="app/main/main.css">
     <!-- build:css({.tmp,client}) app/main/main.css -->
-    <link rel="stylesheet" href="components/footer/footer.css">
 
     <link rel="stylesheet" href="app/courts/courts.css">
 
@@ -87,6 +86,10 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-aria/angular-aria.js"></script>
     <script src="bower_components/angular-material/angular-material.js"></script>
+    <script src="bower_components/blob-polyfill/Blob.js"></script>
+    <script src="bower_components/file-saver.js/FileSaver.js"></script>
+    <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -117,6 +120,9 @@
     <script src="app/reservations/reservations.js"></script>
     <script src="app/reservations/reservations.service.js"></script>
     <script src="app/soccer-fields/soccer-fields.service.js"></script>
+    <script src="app/upload-file/upload-file-user/upload-file.component.js"></script>
+    <script src="app/upload-file/upload-file.routes.js"></script>
+    <script src="app/upload-file/upload-file/upload-file.component.js"></script>
     <script src="app/users/users-create/users-create.controller.js"></script>
     <script src="app/users/users-list/users-list.controller.js"></script>
     <script src="app/users/users-update/users-update.controller.js"></script>
