se agrega el responsive del perfil

--- a/client/index.html
+++ b/client/index.html
@@ -12,14 +12,14 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <base href="/">
     <meta charset="UTF-8">
-
     <title>Social Soccer </title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, manimun-scale=1.0">
+
     <style type="text/css"></style>
 
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
     <!-- bower:css -->
