--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -9,14 +9,14 @@
     <div>{{vm.user.idCities.idDepartment.name}}</div>
     <div>{{vm.user.idCities.name}}</div>
     <div><a class="btn btn-primary Editar" ui-sref="users-update({idUsers:vm.user.idUsers})">Editar Perfil </a></td> -->
-      <div class="container">
+      <div class="container sox">
         <div class="profile-box row ">
           <div class="col-xs-12 col-md-12">
           <div class="profile-cover-image img-responsive ">
             <img src="assets/images/information/12.jpg " class="img-resposive" />
           </div>
           <div class="profile-picture img-responsive  ">
-            <img src="assets/images/Photos/{{vm.user.photoUser}}"/>
+            <img class="img-responsive" src="assets/images/Photos/{{vm.user.photoUser}}"/>
             <div class="panel-body2">
               <div layout="column" ng-cloak class="md-inline-form">
                 <form name="" ng-submit="vm.create(form)">
@@ -28,7 +28,7 @@
               </div>
             </div>
           </div>
-            <div class="profile-content col-xs-12">
+            <div class="profile-content col-xs-12 ">
           <table class="table table-hover">
             <tbody>
               <tr>
