se agrega la seccion de paquetes en el main y se implementan animaciones en ella y en el slider

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,3 +1,20 @@
+<section class="Intro">
+  <div class="container">
+    <div class="row text-left">
+      <div class="col-xs-12 col-md-6">
+        <div class="Intro-container">
+          <div class="Intro-title">
+            <p>Bienvenido a</p>
+            <p>Social Soccer</p>
+            <p>Reserva tu cancha ahora !</p>
+          </div>
+          <a href="" class="Intro-button btn">Comienza Ya</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="Carousel-container">
   <div class="row Carousel-container-scroll">
     <div class="col-xs-12 Carousel-padding Slide-padding">
@@ -12,7 +29,7 @@
         <div class="carousel-inner" role="listbox">
           <div class="item active">
             <img class="img-responsive" src="assets/images/main/1.jpg" alt="...">
-            <div class="carousel-caption">
+            <div class="carousel-caption animated fadeInDownBigd">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
                 <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
@@ -21,7 +38,7 @@
 
           <div class="item">
             <img class="img-responsive" src="assets/images/main/2.jpg" alt="...">
-            <div class="carousel-caption">
+            <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
                 <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
@@ -30,7 +47,7 @@
 
           <div class="item">
             <img class="img-responsive" src="assets/images/main/3.jpg" alt="...">
-            <div class="carousel-caption">
+            <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
                 <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
@@ -49,40 +66,73 @@
       </div>
     </div>
   </div>
-
-<section>
-  <div class="container pintura">
-    <div class="row">
-      <div class="Campo-image">
-        <div class="Campo">
-
-
-
-        </div>
-        <div class="Campo">
-
-        </div>
-        <div class="Campo">
-
-        </div>
-      </div>
-    </div>
-  </div>
 </section>
 
-<div class="Intro">
-  <div class="container">
-    <div class="row text-left">
-      <div class="col-xs-12 col-md-6">
-        <div class="Intro-container">
-          <div class="Intro-title">
-            <p>Bienvenido a</p>
-            <p>Social Soccer</p>
-            <p>Reserva tu cancha ahora !</p>
+<div class="container paquetes ">
+  <div class="row">
+    <h1 class="text-center animated fadeInDown"><strong>¡Conoce los servicios que tenemos para tí!</strong></h1>
+    <hr class="linea animated fadeInDown">
+      <div class="col-md-4 animated fadeInDown">
+          <div class="panel paquete1 ">
+              <div class="panel-heading premium">
+                  <h4 class="text-center">PAQUETE PREMIUM</h4>
+              </div>
+              <div class="panel-body text-center">
+                  <p class="lead"><strong>$550.000 / Mes</strong></p>
+              </div>
+              <ul class="list-group list-group-flush text-center">
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Soporte 24/7</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Atencion</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Servicio</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Beneficios</li>
+              </ul>
+              <div class="panel-footer">
+                  <a class="btn btn-block boton1" href="">COMPRAR</a>
+              </div>
           </div>
-          <a href="" class="Intro-button btn">Comienza Ya</a>
-        </div>
       </div>
-    </div>
+    
+      <div class="col-md-4 animated fadeInDown">
+          <div class="panel paquete2">
+              <div class="panel-heading oro">
+                  <h4 class="text-center">PAQUETE GOLD</h4>
+              </div>
+              <div class="panel-body text-center">
+                  <p class="lead"><strong>$300.000 / Mes</strong></p>
+              </div>
+              <ul class="list-group list-group-flush text-center">
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Soporte 24/7</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Atencion</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Servicio</li>
+              </ul>
+              <div class="panel-footer">
+                  <a class="btn btn-block boton2" href="">COMPRAR</a>
+              </div>
+          </div>
+      </div>
+    
+      <div class="col-md-4 animated fadeInDown">
+          <div class="panel paquete3">
+              <div class="panel-heading estandar">
+                  <h4 class="text-center">PAQUETE ESTANDAR</h4>
+              </div>
+              <div class="panel-body text-center">
+                  <p class="lead"><strong>$150.000 / Mes</strong></p>
+              </div>
+              <ul class="list-group list-group-flush text-center">
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Soporte 24/7</li>
+                  <li class="list-group-item"><i class="icon-ok text-danger"></i>Atencion</li>
+              </ul>
+              <div class="panel-footer">
+                  <a class="btn btn-block boton3" href="">COMPRAR</a>
+              </div>
+          </div>
+      </div>
   </div>
 </div>
+
+
+ 
