--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     <!-- build:css(client) app/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
+    <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -35,6 +36,7 @@
     <link rel="stylesheet" href="app/courts/courts.css">
 
     <!-- injector:css -->
+    <link rel="stylesheet" href="animate.min.css ">
     <!-- endinjector -->
     <!-- endbuild -->
 </head>
