se realizan cambios en el navbar

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -29,7 +29,7 @@
         <div class="carousel-inner" role="listbox">
           <div class="item active">
             <img class="img-responsive" src="assets/images/main/1.jpg" alt="...">
-            <div class="carousel-caption animated fadeInDownBigd">
+            <div class="carousel-caption animated fadeInDownBig">
               <h3>Reserva ya en Social Soccer</h3>
               <p>Te facilitaremos tu reserva <br> Ahora solo sera en unos cuantos Clicks</p>
                 <button ui-sref="users-create" class="btn btn-danger">EMPECEMOS</button>
@@ -92,7 +92,7 @@
               </div>
           </div>
       </div>
-    
+
       <div class="col-md-4 animated fadeInDown">
           <div class="panel paquete2">
               <div class="panel-heading oro">
@@ -112,7 +112,7 @@
               </div>
           </div>
       </div>
-    
+
       <div class="col-md-4 animated fadeInDown">
           <div class="panel paquete3">
               <div class="panel-heading estandar">
@@ -133,6 +133,3 @@
       </div>
   </div>
 </div>
-
-
- 
