se coloca filtro de users-list

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -72,13 +72,13 @@
   <div class="row">
     <h1 class="text-center animated fadeInDown"><strong>¡Conoce los servicios que tenemos para tí!</strong></h1>
     <hr class="linea animated fadeInDown">
-      <div class="col-md-4 animated fadeInDown">
+      <div class="col-md-4 animated fadeInDown Sombra ">
           <div class="panel paquete1 ">
               <div class="panel-heading premium">
                   <h4 class="text-center">PAQUETE PREMIUM</h4>
               </div>
               <div class="panel-body text-center">
-                  <p class="lead"><strong>$550.000 / Mes</strong></p>
+                  <p class="lead"><strong>$150.000 / Mes</strong></p>
               </div>
               <ul class="list-group list-group-flush text-center">
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
@@ -93,13 +93,13 @@
           </div>
       </div>
 
-      <div class="col-md-4 animated fadeInDown">
+      <div class="col-md-4 animated fadeInDown Sombra">
           <div class="panel paquete2">
               <div class="panel-heading oro">
                   <h4 class="text-center">PAQUETE GOLD</h4>
               </div>
               <div class="panel-body text-center">
-                  <p class="lead"><strong>$300.000 / Mes</strong></p>
+                  <p class="lead"><strong>$100.000 / Mes</strong></p>
               </div>
               <ul class="list-group list-group-flush text-center">
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
@@ -113,13 +113,13 @@
           </div>
       </div>
 
-      <div class="col-md-4 animated fadeInDown">
+      <div class="col-md-4 animated fadeInDown Sombra">
           <div class="panel paquete3">
               <div class="panel-heading estandar">
                   <h4 class="text-center">PAQUETE ESTANDAR</h4>
               </div>
               <div class="panel-body text-center">
-                  <p class="lead"><strong>$150.000 / Mes</strong></p>
+                  <p class="lead"><strong>$50.000 / Mes</strong></p>
               </div>
               <ul class="list-group list-group-flush text-center">
                   <li class="list-group-item"><i class="icon-ok text-danger"></i>Actualizacion</li>
