--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
     <link rel="stylesheet" href="bower_components/animate.css/animate.css" />
+    <link rel="stylesheet" href="bower_components/angular-material-data-table/dist/md-data-table.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -92,6 +93,7 @@
     <script src="bower_components/file-saver.js/FileSaver.js"></script>
     <script src="bower_components/angular-file-saver/dist/angular-file-saver.bundle.js"></script>
     <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+    <script src="bower_components/angular-material-data-table/dist/md-data-table.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -136,6 +138,7 @@
     <script src="components/footer/footer.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="components/navbar/navbar.directive.js"></script>
+    <script src="components/util/navigate.params.js"></script>
     <script src="components/util/util.service.js"></script>
     <script src="modal.service.js"></script>
     <!-- endinjector -->
