--- a/client/app/reservations/reservations-list/reservations-list.html
+++ b/client/app/reservations/reservations-list/reservations-list.html
@@ -73,7 +73,7 @@
 	<md-table-pagination md-limit="vm.query.limit"
 	                     md-limit-options="[5, 10, 15, 20]"
 											 md-page="vm.query.page"
-											 md-total="{{vm.users.length}}"
+											 md-total="{{vm.reservations.length}}"
 											 md-on-paginate="getDeserts" md-page-select>
 	</md-table-pagination/>
 </div>
