se agrega la seguridad por url y el modulo forbidden

--- a/client/index.html
+++ b/client/index.html
@@ -110,6 +110,8 @@
     <script src="app/departments/departments.service.js"></script>
     <script src="app/document_types/document_types.service.js"></script>
     <script src="app/establishments/establishments.service.js"></script>
+    <script src="app/forbidden/forbidden.controller.js"></script>
+    <script src="app/forbidden/forbidden.js"></script>
     <script src="app/info/info.controller.js"></script>
     <script src="app/info/info.js"></script>
     <script src="app/login/login.controller.js"></script>
@@ -135,6 +137,7 @@
     <script src="app/users/users.js"></script>
     <script src="app/users/users.service.js"></script>
     <script src="auth/auth.service.js"></script>
+    <script src="auth/routef.decorator.js"></script>
     <script src="components/footer/footer.directive.js"></script>
     <script src="components/navbar/navbar.controller.js"></script>
     <script src="components/navbar/navbar.directive.js"></script>
