--- a/client/app/login/login.html
+++ b/client/app/login/login.html
@@ -3,7 +3,7 @@
     <div class="row" >
       <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
         <form class="Login-form" name="loginForm">
-          <h3 class="Login-title">Iniciar sesión</h3><br>
+          <h3 class="Login-title"> <i class="fa fa-sign-in"> </i> Iniciar sesión</h3><br>
 
           <!--Angular Material-->
           <md-input-container class="md-block">
