se agregan cambios

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,3 +1,15 @@
+
+<!--div class="notificacion">
+  <div class="container">
+    <div class="row col-md-4">
+      <div class="window.alert alert alert-success">
+        <button class="close" data-dismiss="alert"><span>&times;</span></button>
+        Esta es mi alerta de prueba
+      </div>
+    </div>
+  </div>
+</div-->
+
 <section class="Intro">
   <div class="container">
     <div class="row text-left">
