--- a/client/app/profile/profile.html
+++ b/client/app/profile/profile.html
@@ -1,11 +1,11 @@
-<div class="container">
+<!-- <div class="container"> -->
  <div class="user-profile">
-   <div class="profile-header-background"><img src="assets/images/Profile/city.jpg"alt="Profile Header Background"></div>
+   <div class="profile-header-background img-responsive"><img src="assets/images/Profile/city.jpg"alt="Profile Header Background"></div>
    <div class="row">
      <div class="col-md-4">
        <div class="profile-info-left">
          <div class="text-center">
-           <img src="assets/images/Photos/{{vm.user.photoUser}}" alt="Avatar" class="avatar img-circle img-responsive">
+           <img src="assets/images/Photos/{{vm.user.photoUser}}" alt="Avatar" class="avatar  img-circle img-responsive">
            <h2>{{vm.user.names}} {{vm.user.lastNames}} </h2>
          </div>
          <div class="action-buttons">
@@ -13,10 +13,10 @@
            <form name="" ng-submit="vm.create(form)">
 
              <div class="col-xs-6">
-               <button href="#" class="btn btn-success btn-block select"ngf-select ng-model="vm.file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 100, height: 100}"><i class="fa fa-plus-round"></i>Selecciones Archivo</button>
+               <button href="#" class="btn btn-success btn-block select"ngf-select ng-model="vm.file" name="file" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-max-size="20MB" ngf-min-height="100" ngf-resize="{width: 700, height: 700}"><i class="fa fa-spinner"></i> Selecciones Archivo</button>
              </div>
              <div class="col-xs-6">
-               <button class="btn btn-primary btn-block Subir" type="submit"><i class="fa fa-android-mail"></i> Subir foto</button>
+               <button class="btn btn-primary btn-block Subir" type="submit"><i class="fa fa-upload"></i> Subir foto</button>
              </div>
            </div>
          </div>
