--- a/client/index.html
+++ b/client/index.html
@@ -47,6 +47,9 @@
     <link rel="stylesheet" href="animate.min.css ">
     <!-- endinjector -->
     <!-- endbuild -->
+    <link rel="stylesheet" href = "assets/dist/jquery-clockpicker.css">
+
+    <link rel="stylesheet" href = "assets/dist/bootstrap-clockpicker.css">
 </head>
 
 <body ng-app="socialSoccerApp">
@@ -143,6 +146,10 @@
     <script src="app/users/users-update/users-update.controller.js"></script>
     <script src="app/users/users.js"></script>
     <script src="app/users/users.service.js"></script>
+    <script src="assets/dist/bootstrap-clockpicker.js"></script>
+    <script src="assets/dist/bootstrap-clockpicker.min.js"></script>
+    <script src="assets/dist/jquery-clockpicker.js"></script>
+    <script src="assets/dist/jquery-clockpicker.min.js"></script>
     <script src="auth/auth.service.js"></script>
     <script src="auth/routef.decorator.js"></script>
     <script src="components/footer/footer.directive.js"></script>
