se modifica diseño del las reservas

--- a/client/index.html
+++ b/client/index.html
@@ -146,6 +146,10 @@
     <script src="app/users/users-update/users-update.controller.js"></script>
     <script src="app/users/users.js"></script>
     <script src="app/users/users.service.js"></script>
+    <script src="assets/dist/bootstrap-clockpicker.js"></script>
+    <script src="assets/dist/bootstrap-clockpicker.min.js"></script>
+    <script src="assets/dist/jquery-clockpicker.js"></script>
+    <script src="assets/dist/jquery-clockpicker.min.js"></script>
     <script src="auth/auth.service.js"></script>
     <script src="auth/routef.decorator.js"></script>
     <script src="components/footer/footer.directive.js"></script>
