--- a/client/app/reservations/reservations.html
+++ b/client/app/reservations/reservations.html
@@ -22,83 +22,121 @@
               </div>
             </md-content>
 
-            <md-input-container flex="45">
-              <label class="Registrer-label">Hora Inicial</label>
-                  <div class="form-group">
-                    <!--input type="time" name="initialHour" class="form-control  clockpicker" ng-model="vm.reservations.initialHour" required-->
-                    <div class="input-group hora">
-				              <input type="text" class="form-control" value="10:10">
-				              <span class="input-group-addon">
-					              <span class="glyphicon glyphicon-time"></span>
-				              </span>
-			              </div>
-                    <script type="text/javascript">
-
-
-$('.hora').clockpicker({
-   // Texto de confirmacion
-   donetext: 'Done',
-   // Call backs para los distintos eventos
-   init: function() {
-     console.log("colorpicker initiated");
-   },
-   beforeShow: function() {
-     console.log("before show");
-   },
-   afterShow: function() {
-     console.log("after show");
-   },
-   beforeHide: function() {
-     console.log("before hide");
-   },
-   afterHide: function() {
-     console.log("after hide");
-   },
-   beforeHourSelect: function() {
-     console.log("before hour selected");
-   },
-   afterHourSelect: function() {
-     console.log("after hour selected");
-   },
-   beforeDone: function() {
-     console.log("before done");
-   },
-   afterDone: function() {
-     console.log("after done");
-   }
- })
- .find('input').change(function(){
-   console.log('Viene del extenso', this.value);
- });
-
-</script> 
-                  </div>
-
-
-              <div ng-messages="registerForm.initialHour.$error">
-                <div ng-message="required">La hora es requerida</div>
-              </div>
-            </md-input-container>
-            <div flex="10">
-
-            </div>
           </div>
+          <div class="row">
 
-          <div layout="row">
-            <md-input-container flex="45">
-              <label for="">Hora Final</label>
-              		<div class="form-group">
-              			<input type="time" name="finalHour" class="form-control" ng-model="vm.reservations.finalHour" required>
-              		</div>
-              <div ng-messages="registerForm.finalHour.$error">
-                <div ng-message="required">La hora es requerida</div>
+          <md-input-container flex="45">
+            <label class="Registrer-label">Hora Inicial</label>
+            <div class="form-group">
+              <div class="input-group hora">
+                <span class="input-group-addon caja">
+                  <span class="glyphicon glyphicon-time reloj"></span>
+                </span>
+                <input type="time" class="form-control control" name="initialHour" ng-model="vm.reservations.initialHour" required placeholder="10:10"   >
+                <script type="text/javascript">
+
+                $('.hora').clockpicker({
+                  // Texto de confirmacion
+                  donetext: 'Done',
+                  // Call backs para los distintos eventos
+                  init: function() {
+                    console.log("colorpicker initiated");
+                  },
+                  beforeShow: function() {
+                    console.log("before show");
+                  },
+                  afterShow: function() {
+                    console.log("after show");
+                  },
+                  beforeHide: function() {
+                    console.log("before hide");
+                  },
+                  afterHide: function() {
+                    console.log("after hide");
+                  },
+                  beforeHourSelect: function() {
+                    console.log("before hour selected");
+                  },
+                  afterHourSelect: function() {
+                    console.log("after hour selected");
+                  },
+                  beforeDone: function() {
+                    console.log("before done");
+                  },
+                  afterDone: function() {
+                    console.log("after done");
+                  }
+                })
+                .find('input').change(function(){
+                  console.log('Viene del extenso', this.value);
+                });
+
+                </script>
               </div>
-            </md-input-container>
-
-            <div flex="10">
-
             </div>
-          </div>
+
+            <div ng-messages="registerForm.initialHour.$error">
+              <div ng-message="required">La hora es requerida</div>
+            </div>
+          </md-input-container>
+
+          <md-input-container flex="45">
+            <label class="Registrer-label">Hora final</label>
+            <div class="form-group">
+              <div class="input-group hora">
+                <span class="input-group-addon caja">
+                  <span class="glyphicon glyphicon-time reloj"></span>
+                </span>
+                <input type="time" name="finalHour" class="form-control control" ng-model="vm.reservations.finalHour" required>
+                <script type="text/javascript">
+
+                $('.hora').clockpicker({
+                  // Texto de confirmacion
+                  donetext: 'Done',
+                  // Call backs para los distintos eventos
+                  init: function() {
+                    console.log("colorpicker initiated");
+                  },
+                  beforeShow: function() {
+                    console.log("before show");
+                  },
+                  afterShow: function() {
+                    console.log("after show");
+                  },
+                  beforeHide: function() {
+                    console.log("before hide");
+                  },
+                  afterHide: function() {
+                    console.log("after hide");
+                  },
+                  beforeHourSelect: function() {
+                    console.log("before hour selected");
+                  },
+                  afterHourSelect: function() {
+                    console.log("after hour selected");
+                  },
+                  beforeDone: function() {
+                    console.log("before done");
+                  },
+                  afterDone: function() {
+                    console.log("after done");
+                  }
+                })
+                .find('input').change(function(){
+                  console.log('Viene del extenso', this.value);
+                });
+
+                </script>
+              </div>
+            </div>
+
+            <div ng-messages="registerForm.finalHour.$error">
+              <div ng-message="required">La hora es requerida</div>
+            </div>
+          </md-input-container>
+
+        </div>
+
 
           <!--div layout="row">
             <md-input-container flex="45">
@@ -137,6 +175,7 @@ $('.hora').clockpicker({
                   {{item.name}}
                 </md-option>
               </md-select>
+              <br>
               <div ng-messages="registerForm.soccerFields.$error">
                 <div ng-message="required">Por favor ingrese una cancha.</div>
               </div>
@@ -152,24 +191,3 @@ $('.hora').clockpicker({
     </div>
   </div>
 </div>
-
-<!--form name="userForm" ng-submit="vm.createReservations()">
-  <label>Fecha</label>
-  <input type="date" name="fecha" ng-model="vm.reservations.date">
-
-  <label>Hora Inicial</label>
-  <input type="text" name="Hora de inicio" ng-model="vm.reservations.initialHour">
-
-  <label>Hora Final</label>
-  <input type="text" name="Hora de fin" ng-model="vm.reservations.finalHour">
-
-  <label>Usuario</label>
-  <input type="text" name="idUsuario" ng-model="vm.reservations.idUsers.idUsers">
-
-  <label>Cancha</label>
-  <input type="text" name="cancha" ng-model="vm.reservations.idSoccerFields.idSoccerFields">
-
-
-
-  <button type="submit" name="button">Reservar</button>
-</form-->
